<resources>
    <string name="app_name">Ozinshe 2.0</string>
    <string name="profile_language">Тіл</string>
    <string name="my_profile">Менің профилім</string>
    <string name="personal_data">Жеке деректер</string>
    <string name="edit_profile">Өңдеу</string>
    <string name="change_password">Құпия сөзді өзгерту</string>
    <string name="kazakh" translatable="false">Қазақша</string>
    <string name="russian" translatable="false">Русский</string>
    <string name="terms_and_conditions">Ережелер мен шарттар</string>
    <string name="night_mode">Қараңғы режим</string>
    <string name="add_to_favorites">Тізімге қосу</string>
    <string name="share_about">Бөлісу</string>
    <string name="read_more">Толығырақ</string>
    <string name="director_about">Режисер:</string>
    <string name="producer_about">Продюсер:</string>
    <string name="sections_about">Бөлімдер</string>
    <string name="screenshots_about">Скриншоттар</string>
    <string name="similar_tv_series">Ұқсас телехикаялар</string>
    <string name="total_about">Барлығы</string>
    <string name="email" translatable="false">Email</string>
    <string name="greeting_login">Сәлем</string>
    <string name="log_in_to_your_account">Аккаунтқа кіріңіз</string>
    <string name="your_email">Сіздің email</string>
    <string name="wrong_format">Қате формат</string>
    <string name="password">Құпия сөз</string>
    <string name="your_password">Сіздің құпия сөзіңіз</string>
    <string name="forgot_your_password">Құпия сөзді ұмыттыңыз ба?</string>
    <string name="such_email_registered">Мұндай email-ы бар пайдаланушы тіркелген</string>
    <string name="login">Кіру</string>
    <string name="not_have_account">Аккаунтыныз жоқ па?</string>
    <string name="registration">Тіркелу</string>
    <string name="skip_onboarding">Өткізу</string>
    <string name="further_onboarding">Әрі қарай</string>
    <string name="fill_data">Деректерді толтырыңыз</string>
    <string name="repeat_password">Құпия сөзді қайталаңыз</string>
    <string name="you_have_account">Сізде аккаунт бар ма?</string>
    <string name="season">1 сезон</string>
    <string name="welcome_onboarding">ÖZINŞE-ге қош келдің!</string>
    <string name="profile_toolbar">Профиль</string>
</resources>