<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.login.LoginFragment">

    <ImageButton
        android:id="@+id/btnBackLoginFragment"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_back"
        android:backgroundTint="@color/fui_transparent"
        android:layout_marginTop="60dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/txtSalem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_bold"
        android:text="@string/registration"
        android:textColor="?attr/colorSecondary"
        android:textSize="24sp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@+id/btnBackLoginFragment"
        app:layout_constraintTop_toBottomOf="@+id/btnBackLoginFragment" />

    <TextView
        android:id="@+id/txtAccLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_regular"
        android:text="@string/fill_data"
        android:textColor="@color/grey_500"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/txtSalem"
        app:layout_constraintTop_toBottomOf="@+id/txtSalem"/>

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_bold"
        android:text="@string/email"
        android:textColor="?attr/colorSecondary"
        android:textSize="14sp"
        android:layout_marginTop="29dp"
        app:layout_constraintStart_toStartOf="@+id/txtAccLogin"
        app:layout_constraintTop_toBottomOf="@+id/txtAccLogin"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail">

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edittext_focus_action_12dp"
            android:drawableStart="@drawable/ic_message"
            android:drawablePadding="8dp"
            android:hint="@string/your_email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="5dp"
            android:paddingVertical="16dp"
            android:paddingHorizontal="16dp"
            android:textColorHint="@color/grey_400"
            android:textSize="16sp"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/tvTextErrorEmail"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:visibility="gone"
            android:fontFamily="@font/sf_regular"
            android:text="@string/wrong_format"
            android:textColor="@color/red"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_bold"
        android:text="@string/password"
        android:textColor="?attr/colorSecondary"
        android:textSize="14sp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_edittext_focus_action_12dp"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="8dp"
        android:hint="@string/your_password"
        android:inputType="textPassword"
        android:layout_marginTop="5dp"
        android:paddingVertical="16dp"
        android:paddingHorizontal="16dp"
        android:textColorHint="@color/grey_400"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/txtCheckPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_bold"
        android:text="@string/repeat_password"
        android:textColor="?attr/colorSecondary"
        android:textSize="14sp"
        android:layout_marginTop="13dp"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <EditText
        android:id="@+id/editTextCheckPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_edittext_focus_action_12dp"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="8dp"
        android:hint="@string/your_password"
        android:inputType="textPassword"
        android:layout_marginTop="5dp"
        android:paddingVertical="16dp"
        android:paddingHorizontal="16dp"
        android:textColorHint="@color/grey_400"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/txtCheckPassword"
        tools:ignore="Autofill" />

    <ImageButton
        android:id="@+id/btnShowCheckPassword"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_show"
        android:backgroundTint="@color/fui_transparent"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="@id/editTextCheckPassword"
        app:layout_constraintTop_toTopOf="@+id/editTextCheckPassword"
        app:layout_constraintEnd_toEndOf="@id/editTextCheckPassword"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/btnShowPassword"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_show"
        android:backgroundTint="@color/fui_transparent"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="@id/editTextPassword"
        app:layout_constraintTop_toTopOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="@id/editTextPassword"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCheckPassword">

        <TextView
            android:id="@+id/tvErrorTextPasswordAndServer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="31dp"
            android:visibility="gone"
            android:layout_gravity="center"
            android:fontFamily="@font/sf_regular"
            android:text="@string/such_email_registered"
            android:textColor="@color/red"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="24dp"
            android:background="@drawable/background_button_12dp_circle"
            android:backgroundTint="@color/primary_500"
            android:fontFamily="@font/sf_semibold"
            android:text="@string/registration"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="normal"
            android:layout_marginTop="40dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="24dp"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_regular"
                android:text="@string/you_have_account"
                android:textSize="14sp"
                android:textColor="?attr/colorOnTertiaryContainer"/>

            <TextView
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registration"
                android:textColor="@color/primary_300"
                android:textSize="14sp"
                android:fontFamily="@font/sf_semibold"
                android:clickable="true"
                android:focusable="true" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>