<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.profile.ProfileFragment">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="44dp">

    <include
        android:id="@+id/toolbarProfile"
        layout="@layout/toolbar_back_title_exit"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/imgProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_icon_profile"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbarProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/profileTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_profile"
        android:fontFamily="@font/sf_bold"
        android:textColor="@color/grey_900"
        android:textSize="24sp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/imgProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/userEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:fontFamily="@font/sf_regular"
        android:textColor="@color/grey_400"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/profileTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="24dp"
        android:paddingHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/userEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/btnUserEdit"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/personal_data"
                android:fontFamily="@font/sf_medium"
                android:textSize="16sp"
                android:textColor="@color/grey_800"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/sf_semibold"
                android:text="@string/edit_profile"
                android:textColor="@color/grey_400"
                android:textSize="12sp"
                tools:ignore="TextContrastCheck" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@color/fui_transparent"
                android:src="@drawable/ic_button_next"
                tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:backgroundTint="@color/grey_300"
            android:background="@drawable/divider_1dp_grey"
            android:layout_gravity="bottom"/>

        <LinearLayout
            android:id="@+id/btnChangePassword"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                android:fontFamily="@font/sf_medium"
                android:textSize="16sp"
                android:textColor="@color/grey_800"
                android:layout_gravity="center_vertical"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@color/fui_transparent"
                android:src="@drawable/ic_button_next"
                tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:backgroundTint="@color/grey_300"
            android:background="@drawable/divider_1dp_grey"
            android:layout_gravity="bottom"/>

        <LinearLayout
            android:id="@+id/btnChangeLanguage"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/profile_language"
                android:fontFamily="@font/sf_medium"
                android:textSize="16sp"
                android:textColor="@color/grey_800"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:id="@+id/tvSelectedLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/sf_semibold"
                android:text="@string/kazakh"
                android:textColor="@color/grey_400"
                android:textSize="12sp"
                tools:ignore="TextContrastCheck" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@color/fui_transparent"
                android:src="@drawable/ic_button_next"
                tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:backgroundTint="@color/grey_300"
            android:background="@drawable/divider_1dp_grey"
            android:layout_gravity="bottom"/>

        <LinearLayout
            android:id="@+id/btnPrivacyApp"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/terms_and_conditions"
                android:fontFamily="@font/sf_medium"
                android:textSize="16sp"
                android:textColor="@color/grey_800"
                android:layout_gravity="center_vertical"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@color/fui_transparent"
                android:src="@drawable/ic_button_next"
                tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:backgroundTint="@color/grey_300"
            android:background="@drawable/divider_1dp_grey"
            android:layout_gravity="bottom"/>

        <LinearLayout
            android:id="@+id/btnNightMode"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/night_mode"
                android:fontFamily="@font/sf_medium"
                android:textSize="16sp"
                android:textColor="@color/grey_800"
                android:layout_gravity="center_vertical"/>

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switchDayNight"
                android:layout_width="52dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                app:thumbTint="@color/white"
                app:trackDecorationTint="@color/grey_200"
                app:trackTint="@color/grey_200"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>